# Szrapnel

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/DAC_compare_sample_rate/: CMakeLists.txt  DAC_compare_sample_rate.c
examples/DAC_simple_dma/: CMakeLists.txt  DAC_simple_dma.c
examples/DAC_simple_fft/: CMakeLists.txt  DAC_simple_fft.c
examples/DAC_simple_noise/: CMakeLists.txt  DAC_simple_noise.c
examples/DAC_simple_saw/: CMakeLists.txt  DAC_simple_saw.c
examples/DAC_simple_sine/: CMakeLists.txt  DAC_simple_sine.c
examples/DAC_simple_sine_q31/: CMakeLists.txt  DAC_simple_sine_q31.c
examples/DAC_simple_square/: CMakeLists.txt  DAC_simple_square.c
examples/DAC_simple_triangle/: CMakeLists.txt  DAC_simple_triangle.c
examples/DAC_simple_without_dma/: CMakeLists.txt  DAC_simple_without_dma.c
examples/blink/: blink.c
examples/buttons/: CMakeLists.txt  buttons.c
examples/buttons_noise/: CMakeLists.txt  buttons_noise.c
examples/drivers/: CMakeLists.txt
examples/drivers/hc_sr04/: CMakeLists.txt  hc_sr04.c
examples/encoders/: CMakeLists.txt  encoders.c
examples/games/: CMakeLists.txt
examples/games/snake/: CMakeLists.txt  snake.c
examples/lcd_display/: CMakeLists.txt  lcd_display.c
examples/lcd_gradient/: CMakeLists.txt  lcd_gradient.c
examples/lcd_text/: CMakeLists.txt  README.md  lcd_text.c  lcd_text.h
examples/leds/: CMakeLists.txt  leds.c
examples/serial/: CMakeLists.txt  serial.c
examples/synthesis/: CMakeLists.txt
examples/synthesis/additive_ADSR/: CMakeLists.txt  additive_ADSR.c
examples/synthesis/fm/: CMakeLists.txt  fm.c
examples/synthesis/sample-based/: CMakeLists.txt  drums.h  drums_16bit_mono_41000.raw  sample-based.c
examples/test/: .gitignore
examples/zephyr/: README.md
examples/zephyr/boards/noisesculptors/szrapnel/: CMakeLists.txt  Kconfig.defconfig  Kconfig.szrapnel  board.cmake  board.yml  szrapnel.dts  szrapnel.overlay  szrapnel.yaml  szrapnel_defconfig
examples/zephyr/boards/noisesculptors/szrapnel/doc/: index.rst
examples/zephyr/boards/noisesculptors/szrapnel/support/: openocd.cfg
examples/zephyr/samples/display_calibrator750/: README.rst
examples/zephyr/samples/display_calibrator750/src/: main.c
examples/zephyr/samples/i2s/: prj.conf
examples/zephyr/samples/i2s/src/: main.c
io/: CMakeLists.txt  README.md  buttons.c  dac.c  encoders.c  io.c  io.h  io_config.h  lcd.c  leds.c  serial.c
io/drivers/: CMakeLists.txt  drivers.h
io/drivers/hc_sr04/: CMakeLists.txt  hc_sr04.c  hc_sr04.h
io/fonts/: font_6x10.c  font_8x8.c
lib/: CMakeLists.txt
lib/noisesculptors-audio/: ns_audio.c  ns_audio.h
lib/noisesculptors-core/: CMakeLists.txt
lib/noisesculptors-core/ldscripts/h750/: linker_flash.ld
lib/noisesculptors-core/startup/common/: trampoline.S
lib/noisesculptors-core/startup/h750/: startup.c
