
cmake_minimum_required(VERSION 3.19)

add_subdirectory(blink)
add_subdirectory(DAC_simple_dma)
add_subdirectory(DAC_simple_noise)
add_subdirectory(DAC_simple_sine)
add_subdirectory(encoders)
add_subdirectory(lcd_display)
add_subdirectory(lcd_gradient)
add_subdirectory(DAC_simple_without_dma)
add_subdirectory(lcd_text)
add_subdirectory(leds)
add_subdirectory(serial)

add_subdirectory(test)

